Jenkins auto-deploy successful

--- a/process.env
+++ b/process.env
@@ -1,2 +1,4 @@
-accessKeyId: "AKIAQAOUVCVSD7OFF7XH",
-secretAccessKey: "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"
+accessKeyId: "AKIAQAOUVCVSJKEGM4MD",
+secretAccessKey: "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"
+
+GENERATE_SOURCEMAP=false
